fixed height issue on mobile

--- a/styles/home.css
+++ b/styles/home.css
@@ -139,7 +139,7 @@
     }
 
     #section-games{
-        height: 1800px;
+        height: 2500px;
     }
     .games-container{
         display: flex;
